--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,11 @@ notifications:
     on_success: change
     on_failure: always
 
+addons:
+  apt:
+    packages:
+      - aspell
+      - aspell-en
+
 script:
   - make test
