Add templates topic
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -28,6 +28,17 @@ Topics:
 - Name: Welcome
   File: index
 ---
+Name: Working with Templates
+Dir: templates
+Distros: kubevirt-*
+Topics:
+- Name: Introduction
+  File: common-templates
+- Name: Using templates
+  File: using-templates
+- Name: Creating templates
+  File: creating-templates
+---
 Name: Installation & Administration
 Dir: administration
 Distros: kubevirt-*
