Take workloads/ apart and restructure by user flow
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -28,6 +28,51 @@ Topics:
 - Name: Welcome
   File: index
 ---
+Name: Creating Virtual Machines
+Dir: creating-virtual-machines
+Distros: kubevirt-*
+Topics:
+- Name: Introduction
+  File: intro
+- Name: Devices
+  File: virtualized-hardware-configuration
+- Name: Disks and Volumes
+  File: disks-and-volumes
+- Name: Interfaces and Networks
+  File: interfaces-and-networks
+- Name: Guaranteed CPU usage
+  File: dedicated-cpu
+- Name: cloud-init
+  File: startup-scripts
+- Name: Associating Guest Informations
+  File: guest-operating-system-information
+- Name: Presets
+  File: presets
+- Name: Probes
+  File: probes
+---
+Name: Using Virtual Machines
+Dir: using-virtual-machines
+Distros: kubevirt-*
+- Name: Starting and Stopping
+  File: life-cycle
+- Name: Console Access (Serial and Graphical)
+  File: graphical-and-console-access
+- Name: Node placement
+  File: assigning-vms-to-nodes
+- Name: DNS Integration
+  File: dns
+- Name: Service Integration
+  File: expose-service
+- Name: Assigning Network Policies
+  File: create-networkpolicy
+- Name: Memory over-commit
+  File: overcommit
+- Name: Virtual Machine Replica Set
+  File: virtual-machine-replica-set
+- Name: vmctl
+  File: vmctl
+---
 Name: Working with Templates
 Dir: templates
 Distros: kubevirt-*
@@ -51,4 +96,10 @@ Topics:
   File: monitoring
 - Name: Annotations and Labels
   File: annotations_and_labels
+- Name: Unresponsive node handling
+  File: unresponsive-nodes
+- Name: Node eviciton
+  File: node-eviction
+- Name: Image upload
+  File: image-upload
 ---
