Some final touches for relocating files
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -54,6 +54,8 @@ Topics:
 Name: Using Virtual Machines
 Dir: using-virtual-machines
 Distros: kubevirt-*
+- Name: Usage
+  File: usage
 - Name: Starting and Stopping
   File: life-cycle
 - Name: Console Access (Serial and Graphical)
