--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -27,6 +27,14 @@ Distros: kubevirt-*
 Topics:
 - Name: Welcome
   File: index
+- Name: More
+  File: additional-resources
+---
+Name: Architecture
+Dir: architecture
+Topics:
+- Name: Virtual Machines
+  File: virtual-machine
 ---
 Name: Creating Virtual Machines
 Dir: creating-virtual-machines
@@ -54,6 +62,7 @@ Topics:
 Name: Using Virtual Machines
 Dir: using-virtual-machines
 Distros: kubevirt-*
+Topics:
 - Name: Usage
   File: usage
 - Name: Starting and Stopping
@@ -83,17 +92,17 @@ Topics:
   File: common-templates
 - Name: Using templates
   File: using-templates
-- Name: Creating templates
-  File: creating-templates
 ---
 Name: Installation & Administration
 Dir: administration
 Distros: kubevirt-*
 Topics:
 - Name: Installation
-  File: README
+  File: intro
 - Name: Webhooks
   File: api-validation
+- Name: Authorization
+  File: authorization
 - Name: Monitoring
   File: monitoring
 - Name: Annotations and Labels
@@ -104,4 +113,3 @@ Topics:
   File: node-eviction
 - Name: Image upload
   File: image-upload
----
