--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -30,6 +30,13 @@ Topics:
 - Name: More
   File: additional-resources
 ---
+Name: Release Notes
+Dir: release-notes
+Distros: kubevirt-*
+Topics:
+- Name: Changelog
+  File: changelog
+---
 Name: Architecture
 Dir: architecture
 Topics:
