--- a/.travis.yml
+++ b/.travis.yml
@@ -19,3 +19,11 @@ before_script:
 script:
   - make build
   - make test
+
+deploy:
+  provider: pages
+  skip-cleanup: true
+  github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+  keep-history: true
+  on:
+    branch: master
