Link virtio win document
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -80,6 +80,8 @@ Topics:
   File: startup-scripts
 - Name: Associating Guest Informations
   File: guest-operating-system-information
+- Name: virtio drivers for Microsoft Windows
+  File: virtio-win
 - Name: Presets
   File: presets
 - Name: Probes
