--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
       - aspell-en
 
 before_script:
-- gem install ascii_binder
+- gem --no-document install ascii_binder
 
 script:
   - make docs
