Link Device Plugins in topic map
Signed-off-by: Stu Gott <sgott@redhat.com>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -61,6 +61,8 @@ Topics:
   File: node-eviction
 - Name: Image upload
   File: image-upload
+- Name: Device Plugins
+  File: device-plugins
 ---
 Name: Creating Virtual Machines
 Dir: creating-virtual-machines
