Builds docs for branches
Signed-off-by: Fabian Deutsch <fabiand@fedoraproject.org>

--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,3 +9,9 @@ kubevirt-community:
     master:
       name: Latest
       dir: latest
+    release-0.15:
+      name: "0.15"
+      dir: "0.15"
+    release-0.14:
+      name: "0.14"
+      dir: "0.14"
