--- a/_distro_map.yml
+++ b/_distro_map.yml
@@ -9,6 +9,9 @@ kubevirt-community:
     master:
       name: Latest
       dir: latest
+    release-0.16:
+      name: "0.16"
+      dir: "0.16"
     release-0.15:
       name: "0.15"
       dir: "0.15"
