document the live migration process
Signed-off-by: Vladik Romanovsky <vromanso@redhat.com>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -63,6 +63,8 @@ Topics:
   File: image-upload
 - Name: Device Plugins
   File: device-plugins
+  Name: Live Migration
+  File: live-migration
 ---
 Name: Creating Virtual Machines
 Dir: creating-virtual-machines
