Document RunStrategy needed for user initiated shutdown
Signed-off-by: Stu Gott <sgott@redhat.com>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -90,6 +90,8 @@ Topics:
   File: presets
 - Name: Probes
   File: probes
+- Name: Run Strategies
+  File: run-strategies
 ---
 Name: Using Virtual Machines
 Dir: using-virtual-machines
