Add basic walkthrough for web interface

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -124,3 +124,11 @@ Topics:
   File: common-templates
 - Name: Using templates
   File: using-templates
+---
+Name: Web Interface
+Dir: web-interface
+Distros: kubevirt-*
+Topics:
+- Name: Web Interface
+  File: web-interface
+  
