Added pausing docs
Signed-off-by: Marc Sluiter <msluiter@redhat.com>

--- a/_topic_map.yml
+++ b/_topic_map.yml
@@ -99,7 +99,7 @@ Distros: kubevirt-*
 Topics:
 - Name: Usage
   File: usage
-- Name: Starting and Stopping
+- Name: Lifecylce
   File: life-cycle
 - Name: Console Access (Serial and Graphical)
   File: graphical-and-console-access
