Fix failing links in content
Signed-off-by: Chris Callegari <mazzystr@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: KubeVirt User-Guide
-site_url: https://kubevirt.io/docs
+site_url: https://kubevirt.io/user-guide
 site_description: Documentation for KubeVirt
 docs_dir: docs
 site_dir: site
