--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: KubeVirt User-Guide
-site_url: https://kubevirt.io/user-guide
+site_url:
 site_description: Documentation for KubeVirt
 docs_dir: docs
 site_dir: site
@@ -12,6 +12,7 @@ repo_url: https://github.com/kubevirt/user-guide/
 remote_branch: master
 
 markdown_extensions:
+    - admonition
     - toc:
         permalink: true
 
