--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,5 +25,5 @@ theme:
   highlightjs: true
   hljs_languages:
     - yaml
-  icon:
-    logo: assets/favicon32x32.png
+  favicon: assets/favicon32x32.png
+  logo: assets/favicon32x32.png
