--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,5 +25,5 @@ theme:
   highlightjs: true
   hljs_languages:
     - yaml
-  favicon: assets/favicon32x32.png
-  logo: assets/favicon32x32.png
+  favicon: docs/assets/favicon32x32.png
+  logo: docs/assets/favicon32x32.png
