Fix broken links plus supporting fixes (#406)
* Rakefile, remove unnecessary target. Add admonition to config. Fix broken links in markdown.

Signed-off-by: Chris Callegari <mazzystr@gmail.com>

* Config, readd site_url. Rakefile, Add regex to remove user-guide uri for internal links

Signed-off-by: Chris Callegari <mazzystr@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,7 @@ repo_url: https://github.com/kubevirt/user-guide/
 remote_branch: master
 
 markdown_extensions:
+    - admonition
     - toc:
         permalink: true
 
