--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -10,6 +10,7 @@ plugins:
 
 repo_url: https://github.com/kubevirt/user-guide/
 remote_branch: master
+site_favicon: assets/favicon.ico
 
 markdown_extensions:
     - toc:
@@ -25,5 +26,3 @@ theme:
   highlightjs: true
   hljs_languages:
     - yaml
-  icon:
-    logo: assets/favicon.ico
