--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,8 +3,14 @@ on:
   push:
     branches:
       - master
+    paths:
+      - '**.md'
+  pull_request:
+    paths:
+      - '**.md'
   schedule:
-  - cron: "*/5 * * * *"
+  # Run the job for every 05:05
+  - cron: "5 5 * * *"
 env:
   DO_NOT_TRACK: 1
 jobs:
