--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,11 +3,8 @@ on:
   push:
     branches:
       - master
-    paths:
-      - '**.md'
-  pull_request:
-    paths:
-      - '**.md'
+  schedule:
+  - cron: "*/5 * * * *"
 env:
   DO_NOT_TRACK: 1
 jobs:
