Increasing nav depth and stopping sticky_nav
Signed-off-by: Andrew Burden <aburden@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,7 +20,7 @@ markdown_extensions:
 
 theme:
   name: readthedocs
-  navigation_depth: 2
+  navigation_depth: 4
   prev_next_buttons_location: bottom
   include_search_page: true
   search_index_only: false
@@ -28,3 +28,4 @@ theme:
   highlightjs: true
   hljs_languages:
     - yaml
+  sticky_navigation: false
