Improve search configuration
Signed-off-by: Petr Horacek <phoracek@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -5,7 +5,8 @@ docs_dir: docs
 site_dir: site
 
 plugins:
-  - search
+  - search:
+      separator: '[\s\-,:!=\[\]\(\)"/]+|\.(?!\d)'
   - awesome-pages
 
 remote_branch: main
