Adds ability to switch to dark and light modes
Signed-off-by: Dharmit Shah <shahdharmit@gmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -33,8 +33,18 @@ theme:
   logo: assets/KubeVirt_icon.png
   favicon: assets/favicon32x32.png
   palette:
-    primary: teal
-    accent: teal
+    # Palette toggle for light mode
+    - scheme: default
+      toggle:
+        icon: material/weather-night
+        name: Switch to dark mode
+
+    # Palette toggle for dark mode
+    - scheme: slate
+      toggle:
+        icon: material/weather-sunny
+        name: Switch to light mode
+       
   features:
     - navigation.sections  
     - navigation.footer
