Keep high-level navigation in a horizontal panel
Today, all the pages are listed in the left vertical menu. With over 60
items in this menu, it can be hard to navigate. By introducing this
high level separation, all the main sections should be right at the
top of the page.

Signed-off-by: Petr Horacek <hrck@protonmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,5 +48,6 @@ theme:
   features:
     - navigation.sections  
     - navigation.footer
+    - navigation.tabs
     - content.action.view
     - content.action.edit
