Keep the horizontal navigation always visible
Signed-off-by: Petr Horacek <hrck@protonmail.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,5 +49,6 @@ theme:
     - navigation.sections  
     - navigation.footer
     - navigation.tabs
+    - navigation.tabs.sticky
     - content.action.view
     - content.action.edit
