mkdocs: Use teal as primary and accent color
Signed-off-by: Felix Matouschek <fmatouschek@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -35,12 +35,16 @@ theme:
   palette:
     # Palette toggle for light mode
     - scheme: default
+      primary: teal
+      accent: teal
       toggle:
         icon: material/weather-night
         name: Switch to dark mode
 
     # Palette toggle for dark mode
     - scheme: slate
+      primary: teal
+      accent: teal
       toggle:
         icon: material/weather-sunny
         name: Switch to light mode
