enabling footnotes feature
Signed-off-by: Andrew Burden <aburden@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ edit_uri: https://github.com/kubevirt/user-guide/edit/main/docs/
 
 markdown_extensions:
   - admonition
+  - footnotes
   - toc:
       permalink: true
   - pymdownx.highlight:
