Updated for new files, xrefs, and links
Signed-off-by: Andrew Burden <aburden@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -42,7 +42,6 @@ theme:
         icon: material/weather-night
         name: Switch to dark mode
 
-    # Palette toggle for dark mode
     - scheme: slate
       primary: teal
       accent: teal
@@ -53,6 +52,7 @@ theme:
   features:
     - navigation.sections  
     - navigation.footer
+    - navigation.path
     - navigation.tabs
     - navigation.tabs.sticky
     - content.action.view
