Workaround: adding mkdocs-redirects build and redirect map to mkdocs.yml
Signed-off-by: Andrew Burden <aburden@redhat.com>

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -8,6 +8,81 @@ plugins:
   - search:
       separator: '[\s\-,:!=\[\]\(\)"/]+|\.(?!\d)'
   - awesome-pages
+  - redirects:
+      redirect_maps:
+         'operations/customize_components.md': 'cluster_admin/customize_components.md'
+         'operations/installation.md': 'cluster_admin/installation.md'
+         'operations/updating_and_deletion.md': 'cluster_admin/updating_and_deletion.md'
+         'operations/basic_use.md': 'user_workloads/basic_use.md'
+         'operations/customize_components.md': 'cluster_admin/customize_components.md'
+         'operations/deploy_common_instancetypes.md': 'user_workloads/deploy_common_instancetypes.md'
+         'operations/api_validation.md': 'cluster_admin/api_validation.md'
+         'operations/debug.md': 'debug_virt_stack/debug.md'
+         'operations/virtctl_client_tool.md': 'user_workloads/virtctl_client_tool.md'
+         'operations/live_migration.md': 'compute/live_migration.md'
+         'operations/hotplug_interfaces.md': 'network/hotplug_interfaces.md'
+         'operations/hotplug_volumes.md': 'storage/hotplug_volumes.md'
+         'operations/client_passthrough.md': 'compute/client_passthrough.md'
+         'operations/snapshot_restore_api.md': 'storage/snapshot_restore_api.md'
+         'operations/scheduler.md': 'cluster_admin/scheduler.md'
+         'operations/hugepages.md': 'compute/hugepages.md'
+         'operations/component_monitoring.md': 'user_workloads/component_monitoring.md'
+         'operations/authorization.md': 'cluster_admin/authorization.md'
+         'operations/annotations_and_labels.md': 'cluster_admin/annotations_and_labels.md'
+         'operations/node_assignment.md': 'compute/node_assignment.md'
+         'operations/node_maintenance.md': 'cluster_admin/node_maintenance.md'
+         'operations/node_overcommit.md': 'compute/node_overcommit.md'
+         'operations/unresponsive_nodes.md': 'cluster_admin/unresponsive_nodes.md'
+         'operations/containerized_data_importer.md': 'storage/containerized_data_importer.md'
+         'operations/activating_feature_gates.md': 'cluster_admin/activating_feature_gates.md'
+         'operations/export_api.md': 'storage/export_api.md'
+         'operations/clone_api.md': 'storage/clone_api.md'
+         'operations/memory_dump.md': 'compute/memory_dump.md'
+         'operations/mediated_devices_configuration.md': 'compute/mediated_devices_configuration.md'
+         'operations/migration_policies.md': 'cluster_admin/migration_policies.md'
+         'operations/ksm.md': 'cluster_admin/ksm.md'
+         'operations/gitops.md': 'cluster_admin/gitops.md'
+         'operations/operations_on_Arm64.md': 'cluster_admin/operations_on_Arm64.md'
+         'operations/feature_gate_status_on_Arm64.md': 'cluster_admin/feature_gate_status_on_Arm64.md'
+         'operations/cpu_hotplug.md': 'compute/cpu_hotplug.md'
+         'operations/memory_hotplug.md': 'compute/memory_hotplug.md'
+         'operations/vm_rollout_strategies.md': 'user_workloads/vm_rollout_strategies.md'
+         'operations/hook-sidecar.md': 'user_workloads/hook-sidecar.md'
+         'virtual_machines/virtual_machine_instances.md': 'user_workloads/virtual_machine_instances.md'
+         'virtual_machines/creating_vms.md': 'user_workloads/creating_vms.md'
+         'virtual_machines/lifecycle.md': 'user_workloads/lifecycle.md'
+         'virtual_machines/run_strategies.md': 'compute/run_strategies.md'
+         'virtual_machines/instancetypes.md': 'user_workloads/instancetypes.md'
+         'virtual_machines/presets.md': 'user_workloads/presets.md'
+         'virtual_machines/virtual_hardware.md': 'compute/virtual_hardware.md'
+         'virtual_machines/dedicated_cpu_resources.md': 'compute/dedicated_cpu_resources.md'
+         'virtual_machines/numa.md': 'compute/numa.md'
+         'virtual_machines/disks_and_volumes.md': 'storage/disks_and_volumes.md'
+         'virtual_machines/interfaces_and_networks.md': 'network/interfaces_and_networks.md'
+         'virtual_machines/network_binding_plugins.md': 'network/network_binding_plugins.md'
+         'virtual_machines/istio_service_mesh.md': 'network/istio_service_mesh.md'
+         'virtual_machines/networkpolicy.md': 'network/networkpolicy.md'
+         'virtual_machines/host-devices.md': 'compute/host-devices.md'
+         'virtual_machines/windows_virtio_drivers.md': 'user_workloads/windows_virtio_drivers.md'
+         'virtual_machines/guest_operating_system_information.md': 'user_workloads/guest_operating_system_information.md'
+         'virtual_machines/guest_agent_information.md': 'user_workloads/guest_agent_information.md'
+         'virtual_machines/liveness_and_readiness_probes.md': 'user_workloads/liveness_and_readiness_probes.md'
+         'virtual_machines/accessing_virtual_machines.md': 'user_workloads/accessing_virtual_machines.md'
+         'virtual_machines/startup_scripts.md': 'user_workloads/startup_scripts.md'
+         'virtual_machines/service_objects.md': 'network/service_objects.md'
+         'virtual_machines/templates.md': 'user_workloads/templates.md'
+         'virtual_machines/tekton_tasks.md': 'cluster_admin/tekton_tasks.md'
+         'virtual_machines/replicaset.md': 'user_workloads/replicaset.md'
+         'virtual_machines/pool.md': 'user_workloads/pool.md'
+         'virtual_machines/dns.md': 'network/dns.md'
+         'virtual_machines/boot_from_external_source.md': 'user_workloads/boot_from_external_source.md'
+         'virtual_machines/confidential_computing.md': 'cluster_admin/confidential_computing.md'
+         'virtual_machines/vsock.md': 'compute/vsock.md'
+         'virtual_machines/virtual_machines_on_Arm64.md': 'cluster_admin/virtual_machines_on_Arm64.md'
+         'virtual_machines/device_status_on_Arm64.md': 'cluster_admin/device_status_on_Arm64.md'
+         'virtual_machines/persistent_tpm_and_uefi_state.md': 'compute/persistent_tpm_and_uefi_state.md'
+         'virtual_machines/resources_requests_and_limits.md': 'compute/resources_requests_and_limits.md'
+         'virtual_machines/guestfs.md': 'storage/guestfs.md'
 
 remote_branch: main
 site_favicon: assets/favicon.ico
