--- a/netlify.toml
+++ b/netlify.toml
@@ -2,7 +2,7 @@
   publish = "./site"
   command = """
 source /opt/buildhome/python3.8/bin/activate;
-pip3 install mkdocs mkdocs-awesome-pages-plugin mkdocs-material;
+pip3 install mkdocs mkdocs-awesome-pages-plugin mkdocs-material mkdocs-redirects;
 sed -i 's|site_url: https://kubevirt.io/docs|site_url: https://kubevirt.io/|' /opt/build/repo/mkdocs.yml;
 sed -i 's/docs_dir: docs/docs_dir:/' /opt/build/repo/mkdocs.yml;
 echo '*** BEGIN /opt/build/repo/mkdocs.yml ***';
