--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,7 @@ plugins:
          'operations/node_overcommit.md': 'compute/node_overcommit.md'
          'operations/unresponsive_nodes.md': 'cluster_admin/unresponsive_nodes.md'
          'operations/containerized_data_importer.md': 'storage/containerized_data_importer.md'
+         'operations/migration_controller.md': 'storage/migration_controller.md'
          'operations/activating_feature_gates.md': 'cluster_admin/activating_feature_gates.md'
          'operations/export_api.md': 'storage/export_api.md'
          'operations/clone_api.md': 'storage/clone_api.md'
